# openrag

./: .env.example  .env.ollama  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ray  FORWARD_PORT_LOG.md  README.md  REFACTORING_DECISION_LOG.md  cluster.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: integration_tests.yml  layer_guard.yml  lint.yml  unit_tests.yml
ansible/: ansible.cfg
ansible/playbooks/: openrag.yml
benchmarks/prompt_eval/: .env.example  Report_query_decomposition.md  Report_temporal_filter.md  eval_query_decomposition.py  eval_temporal_filter_generation.py  pyproject.toml
benchmarks/prompt_eval/datasets/: query_decomposition.json  temporal_filter.json
benchmarks/prompt_eval/prompts/: query_contextualizer_tmpl_v0.txt  (+1 more)
charts/openrag-stack/: Chart.yaml  values-linagora.yaml  values-openrag.yaml  values.schema.json  values.yaml
conf/: config.yaml
docs/: oidc.md  sso-quickstart.md
docs/assets/: compose_linux_gpu.yaml  compose_ollama_cpu.yaml  env_example.env  env_linux_gpu.env
docs/refactoring/: REFACTORING_DEV_WORKFLOW.md  REFACTORING_STRATEGY_v1.md
openrag/: api.py  app_front.py  conftest.py  consts.py  main.py  test_token_validation.py
openrag/components/: files.py  llm.py  pipeline.py  rate_limit.py  ray_utils.py  retriever.py  test_llm.py  test_rate_limit.py  test_source_filtering.py  utils.py
openrag/config/: __init__.py  loader.py  models.py
openrag/core/config/: auth.py  (+9 more)
openrag/di/: container.py  embedders.py  inference.py  llms.py  providers.py  repositories.py  rerankers.py  test_container.py  test_inference.py  vector_stores.py  vlms.py
openrag/models/: openai.py  user.py
openrag/routers/: actors.py  auth.py  download.py  extract.py  indexer.py  openai.py  partition.py  queue.py  search.py  test_auth_router.py  test_utils_partition_access.py  tools.py  users.py  utils.py  workspaces.py
openrag/scripts/: backup.py  check_file_counts.py  restore.py
openrag/utils/: dependencies.py  external_resource_errors.py  logger.py  ssrf.py  test_logger.py
openrag_metrics/: docker-compose.yaml
prompts/example1/: spoken_style_answer_tmpl.txt  sys_prompt_tmpl.txt
quick_start/: docker-compose.yaml
quick_start/vdb/: milvus.yaml
scripts/: check_layer_imports.py
scripts/postgres-init/: 01-chainlit.sql
tests/api_tests/: test_indexer.py  test_oidc_lifecycle.py
tests/integration/: __init__.py  conftest.py  docker-compose.yaml  test_document_repo.py  test_milvus_store_integration.py  test_oidc_session_repo.py  test_partition_membership_repo.py  test_partition_repo.py  test_postgres_store.py  test_stores.py  test_user_repo.py  test_workspace_repo.py
vdb/: milvus.yaml
(+299 files in other folders)
