[project]
name = "openrag"
version = "1.1.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiopath>=0.7.7",
    "chainlit>=2.2.1",
    "docling>=2.24.0",
    "einops>=0.8.1",
    "pyyaml>=6.0",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.39",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "loguru>=0.7.3",
    "marker-pdf>=0.2.17",
    "pypdfium2>=4.30.0",
    "pydub>=0.25.1",
    "pymupdf4llm>=0.0.17",
    "spire-doc>=13.1.0",
    "openai>=1.64.0",
    "ray[default]>=2.47.1",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.0.1",
    "pip>=25.0.1",
    "chardet>=5.2.0",
    "torch>=2.4.1",
    "robotframework>=7.2.2",
    "robotframework-requests>=0.9.7",
    "infinity-client>=0.0.76",
    "asyncpg>=0.30.0",
    "boto3>=1.38.33",
    "eml-parser>=2.0.0",
    "prometheus-client>=0.21.0",
    "sqlalchemy_utils",
    "psycopg2>=2.9.10",
    "llvmlite>=0.44.0",
    "numba>=0.61.2",
    "umap-learn>=0.5.9.post2",
    "hdbscan>=0.8.40",
    "pytest-env>=1.1.5",
    "markitdown[docx]>=0.1.3",
    "html-to-markdown>=2.4.0",
    "lxml>=5.0.0",
    "alembic>=1.17.0",
    "fast-langdetect>=1.0.0",
    "ruff>=0.14.1",
    "cairosvg>=2.7.0",
    "pymilvus>=2.6.9",
    "protobuf>=5.27,<6.0",
    "faster-whisper>=1.1.0",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "cryptography>=42",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22",
]
lint = [
    "ruff>=0.14.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openrag*"]



[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
    "vdb",
    "ray_mount",
    "model_weights",
    "logs",
    ".astro",
    "openrag.egg-info",
    "extern"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PIE",    # flake8-pie
    # "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (already handled by line-length)
    "F403",
    "F405",    # Allow star imports - used intentionally for convenience    
]

[tool.ruff.lint.isort]
known-first-party = ["openrag"]

[tool.uv.workspace]
exclude = ["benchmarks/prompt_eval"]
